--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p class="last-updated">Last Updated: November 13, 2025</p>
 
     <h2>1. Acceptance of Terms</h2>
-    <p>By accessing and using [Reva]'s services, you accept and agree to be bound by the terms and provisions of this agreement.</p>
+    <p>By accessing and using Reva's services, you accept and agree to be bound by the terms and provisions of this agreement.</p>
 
     <h2>2. Use of Service</h2>
     <p>You agree to use our service only for lawful purposes and in accordance with these Terms of Service.</p>
@@ -48,82 +48,33 @@
     <p>All payments are processed securely through Stripe. By making a purchase, you agree to provide current, complete, and accurate purchase and account information.</p>
     
     <h3>Refund Policy</h3>
-    <p>[Describe your refund policy here - e.g., "Full Refunds are available within 24 hours of purchase" or "Partial refunds of $1500 can be processed within seven(7) days of the original perchase due to there being a non-refundable $1000 fee for scripting and system prep" also "Subscription cancelations must be requested in writing via email upto 72 hours before next payment date" otherwise "All sales are final"]</p>
+    <p>"Full Refunds are available within 24 hours of purchase" or "Partial refunds of $1500 can be processed within seven(7) days of the original perchase due to there being a non-refundable $1000 fee for scripting and system prep" also "Subscription cancelations must be requested in writing via email upto 72 hours before next payment date" otherwise "All sales are final"</p>
 
     <h2>4. Intellectual Property</h2>
     <p>The service and its original content, features, and functionality are owned by [Reva] and are protected by international copyright, trademark, and other intellectual property laws.</p>
 
     <h2>5. Limitation of Liability</h2>
-    <p>In no event shall [Reva], nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential, or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses.</p>
+    <p>In no event shall Reva, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential, or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses.</p>
 
     <h2>6. Dispute Resolution</h2>
-    <p>Any disputes arising out of or relating to these Terms of Service shall be resolved through binding arbitration in accordance with the rules of [New York State].</p>
+    <p>Any disputes arising out of or relating to these Terms of Service shall be resolved through binding arbitration in accordance with the rules of New York State of the United States of America.</p>
 
     <h2>7. Changes to Terms</h2>
     <p>We reserve the right to modify or replace these terms at any time. Continued use of the service after changes constitutes acceptance of the new terms.</p>
 
     <h2>8. Governing Law</h2>
-    <p>These Terms shall be governed by and construed in accordance with the laws of [New York State], without regard to its conflict of law provisions.</p>
+    <p>These Terms shall be governed by and construed in accordance with the laws of New York State of the United States of America, without regard to its conflict of law provisions.</p>
 
     <div class="contact">
         <h2>Contact Information</h2>
         <p>If you have any questions about these Terms, please contact us at:</p>
         <p>
-            Email: [jcarballo321@gmail.com]<br>
-            Address: [900 Baychester Ave Apt 10C, New York, NY 10475]
+            Email: jcarballo321@gmail.com<br>
+            Phone: 201-834-6541<br>
+            Address: 900 Baychester Ave Apt 10C, New York, NY 10475
         </p>
     </div>
 </body>
 </html>
 ```
 
-### Step 6: Customize the Template
-Now edit the parts in [brackets]:
-- Replace `[Your Business Name]` with your actual business name
-- Replace `[your-email@example.com]` with your email
-- Replace `[Your Business Address]` with your address
-- Fill in your refund policy
-- Update `[Your State/Country]` with your location
-- Modify any sections to match your specific needs
-
-### Step 7: Save Your File
-1. Scroll down to the bottom of the page
-2. You'll see "Commit new file"
-3. In the text box, you can leave it as "Create index.html" or write your own message like "Add Terms of Service page"
-4. Click the **green "Commit new file"** button
-
----
-
-## Part 4: Enabling GitHub Pages (2 minutes)
-
-### Step 8: Go to Repository Settings
-1. Click on **"Settings"** (tab at the top of your repository page, looks like a gear icon)
-2. In the left sidebar, scroll down and click on **"Pages"** (under the "Code and automation" section)
-
-### Step 9: Configure GitHub Pages
-1. Under **"Source"**, you'll see a dropdown that might say "None"
-2. Click the dropdown and select **"Deploy from a branch"**
-3. Under **"Branch"**, click the dropdown (might say "None")
-4. Select **"main"** (or "master" if that's what you see)
-5. Leave the folder as **"/ (root)"**
-6. Click **"Save"**
-
-### Step 10: Wait for Deployment (1-2 minutes)
-1. You'll see a blue box that says "GitHub Pages source saved"
-2. **Refresh the page** after about 30 seconds
-3. At the top, you should now see a green box that says:
-   - **"Your site is live at https://[username].github.io/terms-of-service/"**
-
----
-
-## Part 5: Accessing Your Terms of Service Page
-
-### Step 11: Get Your URL
-Your Terms of Service is now live at:
-```
-https://[your-github-username].github.io/terms-of-service/
-```
-
-For example, if your username is "johnsbakery", the URL would be:
-```
-https://johnsbakery.github.io/terms-of-service/
