Revise refund policy wording in index.html
Updated refund policy text for clarity and correctness.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p>All payments are processed securely through Stripe. By making a purchase, you agree to provide current, complete, and accurate purchase and account information.</p>
     
     <h3>Refund Policy</h3>
-    <p>"Full Refunds are available within 24 hours of purchase" or "Partial refunds of $1500 can be processed within seven(7) days of the original perchase due to there being a non-refundable $1000 fee for scripting and system prep" also "Subscription cancelations must be requested in writing via email upto 72 hours before next payment date" otherwise "All sales are final"</p>
+    <p>Full Refunds are only available within 24 hours of purchase date.<br> Partial refunds of $1500 can be processed within seven(7) days of the original purchase, due to there being a non-refundable $1000 fee for scripting and system prep.<br> Also Subscription cancelations must be requested in writing via email upto 72 hours before the upcoming payment date.<br> Otherwise All sales are final!</p>
 
     <h2>4. Intellectual Property</h2>
     <p>The service and its original content, features, and functionality are owned by [Reva] and are protected by international copyright, trademark, and other intellectual property laws.</p>
